--- a/app/views/templates/contact.twig
+++ b/app/views/templates/contact.twig
@@ -13,15 +13,15 @@
         <div class="row justify-content-center">
           <div class="col-lg-8 col-xl-7">
 
-            {% if session.tmp.mailErrors %}
+            {% if session.tmp.mailerrors %}
               <div class="alert alert-danger" role="alert">
-		            {{ session.tmp.mailErrors|nl2br }}
+		            {{ session.tmp.mailerrors|raw }}
 		        	</div>
             {% endif %}
 
-            {% if session.tmp.mailSuccess %}
+            {% if session.tmp.mailsuccess %}
               <div class="alert alert-success" role="alert">
-				        {{ session.tmp.mailSuccess|nl2br }}
+				        {{ session.tmp.mailsuccess|raw }}
               </div>
             {% endif %}
 
