--- a/app/views/templates/commentlist.twig
+++ b/app/views/templates/commentlist.twig
@@ -23,45 +23,44 @@
                             <th scope="col">Posté le</th>
                             <th scope="col">Pending</th>
                         </tr>
-                        {% if count == 0 %}
+                        {% if countPending == 0 %}
                             <tr>
                                 <td colspan="5">Aucun commentaire en attente de validation.</td>
                             </tr>
                         {% endif %}
-                        {% if count > 0 %}
+                        {% if countPending > 0 %}
                         {% for comments in commentList %}
-                        {{ dump(pendingComments.pendingStatus) }}
                             <tr>
-                            {% if pendingComments.pendingStatus == 1 %}
-                                <td class="tableResults" id="title" style="background-image: url(../../../public/images/blog/{{ pendingComments.urlImg }}); background-repeat: no-repeat; background-size: 100%; background-position:center;"><a href="{{ session.routes.post }}{{ pendingComments.postId }}">{{ pendingComments.postTitle }}</a></td>
+                            {% if comments.pendingStatus == 1 %}
+                                <td class="tableResults" id="title" style="background-image: url(../../../public/images/blog/{{ comments.urlImg }}); background-repeat: no-repeat; background-size: 100%; background-position:center;"><a href="{{ session.routes.post }}{{ comments.postId }}">{{ comments.postTitle }}</a></td>
                                 <td class="tableResults">{{ username }}</td>
-                                <td class="tableResults">{{ pendingComments.commentContent }}</td>
-                                <td class="tableResults">{{ pendingComments.commentDateFr }}</td>
+                                <td class="tableResults">{{ comments.commentContent }}</td>
+                                <td class="tableResults">{{ comments.commentDateFr }}</td>
                                 <td class="tableResults">                         
                                     <!-- Accept comment button -->
-                                    <button class="btn btn-sm btn-success btn-admin" type="button" data-bs-toggle="modal" data-bs-target="#acceptComment{{ pendingComments.commentId }}">Valider</button>
+                                    <button class="btn btn-sm btn-success btn-admin" type="button" data-bs-toggle="modal" data-bs-target="#acceptComment{{ comments.commentId }}">Valider</button>
                                     <!-- Accept comment modal-->
-                                    <div class="modal fade" id="acceptComment{{ pendingComments.commentId }}" tabindex="-1" role="dialog" aria-labelledby="acceptCommentLabel" aria-hidden="true">
+                                    <div class="modal fade" id="acceptComment{{ comments.commentId }}" tabindex="-1" role="dialog" aria-labelledby="acceptCommentLabel" aria-hidden="true">
                                         <div class="modal-dialog modal-dialog-centered">
                                             <div class="modal-content">
                                                 <div class="modal-body">
                                                     <p>Valider le commentaire ?</p>
                                                     <button type="button" class="btn btn-outline-primary btn-sm text-white" data-bs-dismiss="modal">Annuler</button>
-                                                    <a href="{{ session.routes.validcomment }}{{ pendingComments.commentId }}" type="submit" class="btn btn-outline-success btn-sm text-white">Valider</a>
+                                                    <a href="{{ session.routes.validcomment }}{{ comments.commentId }}" type="submit" class="btn btn-outline-success btn-sm text-white">Valider</a>
                                                 </div>
                                             </div>
                                         </div>
                                   </div>
                                   <!-- Delete comment button -->
-                                  <button class="btn btn-sm btn-danger btn-admin" type="button" data-bs-toggle="modal" data-bs-target="#deleteComment{{ pendingComments.commentId }}" >Supprimer</button>
+                                  <button class="btn btn-sm btn-danger btn-admin" type="button" data-bs-toggle="modal" data-bs-target="#deleteComment{{ comments.commentId }}" >Supprimer</button>
                                   <!-- Delete comment modal-->
-                                  <div class="modal fade" id="deleteComment{{ pendingComments.commentId }}" tabindex="-1" role="dialog" aria-labelledby="deleteCommentLabel" aria-hidden="true">
+                                  <div class="modal fade" id="deleteComment{{ comments.commentId }}" tabindex="-1" role="dialog" aria-labelledby="deleteCommentLabel" aria-hidden="true">
                                     <div class="modal-dialog modal-dialog-centered">
                                         <div class="modal-content">
                                             <div class="modal-body">
                                                 <p>Supprimer le commentaire ?</p>
                                                 <button type="button" class="btn btn-outline-primary btn-sm text-white" data-bs-dismiss="modal">Annuler</button>
-                                                <a href="{{ session.routes.deletecomment }}{{ pendingComments.commentId }}"  type="submit" class="btn btn-outline-danger btn-sm text-white">Supprimer</a>
+                                                <a href="{{ session.routes.deletecomment }}{{ comments.commentId }}"  type="submit" class="btn btn-outline-danger btn-sm text-white">Supprimer</a>
                                             </div>
                                         </div>
                                     </div>
@@ -100,7 +99,7 @@
                                         <div class="modal-body">
                                             <p>Supprimer le commentaire ?</p>
                                             <button type="button" class="btn btn-outline-primary btn-sm text-white" data-bs-dismiss="modal">Annuler</button>
-                                            <a href="{{ session.route.deletecomment }}{{ validcomment.commentId }}"  type="submit" class="btn btn-outline-danger btn-sm text-white">Supprimer</a>
+                                            <a href="{{ session.routes.deletecomment }}{{ validcomment.commentId }}"  type="submit" class="btn btn-outline-danger btn-sm text-white">Supprimer</a>
                                         </div>
                                     </div>
                                 </div>
@@ -132,7 +131,6 @@
       </div>
     </section>
 {% endif %}
-
 {% if session.username is not defined or  session.userIsAdmin == 0 %}
     <header class="header">
         <div class="container">
