--- a/app/views/templates/blog.twig
+++ b/app/views/templates/blog.twig
@@ -30,10 +30,10 @@
             <!--Blog Item Loop-->
             {% for post in posts %}
             <div class="col-12 col-md-6 col-lg-4 mb-5">
-                <div class="blog-item mx-auto" data-bs-toggle="modal" data-bs-target="#blogModal1">
+                <div class="blog-item mx-auto">
                     <a href="{{ session.routes.post }}{{ post.postId }}">
-                        <div class="blog-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="blog-item-caption-content text-center text-pink"></div>
+                        <div class="blog-item-caption h-100 w-100">
+                            <div class="text-center"></div>
                         </div>
                         <img class="img-fluid" src="../../public/images/blog/{{ post.urlImg }}" alt="{{ post.postTitle }}">
                         <div class="blog-item-title text-white text-uppercase mb-0 mt-2">
