--- a/app/views/templates/layout.twig
+++ b/app/views/templates/layout.twig
@@ -47,7 +47,7 @@
                         <a class="dropdown-item nav-link py-2 px-0 px-lg-2" href="{{ session.routes.account }}">{{ session.username }}</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item nav-link py-2 px-0 px-lg-2 text-normalize" href="{{ session.routes.newpost }}">Nouvel article</a>
-                        <a class="dropdown-item nav-link py-2 px-0 px-lg-2 text-normalize" href="{{ session.routes.userlist }}">Liste des utilisateurs</a>
+                        <a class="dropdown-item nav-link py-2 px-0 px-lg-2 text-normalize" href="{{ session.routes.userlist }}1">Liste des utilisateurs</a>
                         <a class="dropdown-item nav-link py-2 px-0 px-lg-2 text-normalize" href="{{ session.routes.commentlist }}">Liste des commentaires</a>
                       </div>
                   </div>
