--- a/app/views/templates/newpost.twig
+++ b/app/views/templates/newpost.twig
@@ -38,6 +38,7 @@
         </div>
         <div class="row text-white">
             <div class="col-sm-12 col-lg-6">
+            <!-- FORM -->
                 <form action="{{ session.routes.addpost }}" method="post" enctype="multipart/form-data" id="editform">
                     <label for="title">Titre</label>
                     <input class="form-control bg-primary" name="title" type="text" placeholder="Titre de l'article..." data-sb-validations="required" />
@@ -68,6 +69,7 @@
                         </div>
                     </div>
                 </form>
+            <!-- FORM END -->
             </div>
         </div>
     </div>
