Minor security updates

--- a/app/views/templates/authentication.twig
+++ b/app/views/templates/authentication.twig
@@ -66,7 +66,7 @@
                     <input class="form-control mb-3" name="username" type="text" placeholder="Nom d'utilisateur"/>
 	       
     		      	<label for="password">Mot de passe</label>
-                    <input class="form-control" name="password" type="password" placeholder="Mot de passe"/>
+                    <input class="form-control mb-3" name="password" type="password" placeholder="Mot de passe"/>
         
                     <label for="passwordCheck">Validez votre mot de passe</label>
                     <input class="form-control" name="passwordCheck" type="password" placeholder="Mot de passe"/>
