--- a/app/views/templates/newpost.twig
+++ b/app/views/templates/newpost.twig
@@ -39,7 +39,7 @@
         <div class="row text-white">
             <div class="col-sm-12 col-lg-6">
             <!-- FORM -->
-                <form action="{{ session.routes.addpost }}" method="post" enctype="multipart/form-data" id="editform">
+                <form action="{{ session.routes.addpost }}" method="post" enctype="multipart/form-data" id="newpostform">
                     <label for="title">Titre</label>
                     <input class="form-control bg-primary" name="title" type="text" placeholder="Titre de l'article..." data-sb-validations="required" />
 
