--- a/app/views/templates/about.twig
+++ b/app/views/templates/about.twig
@@ -12,7 +12,7 @@
             </div>
             <div class="container d-flex align-items-center flex-column">
                 <div class="row d-flex align-items-center flex-column">
-                    <a href="../public/ressources/CV.pdf" target="_blank" class="btn btn-secondary mb-3" download="CV.pdf">Télécharger mon CV</a>
+                    <a href="public/ressources/CV.pdf" target="_blank" class="btn btn-secondary mb-3" download="CV.pdf">Télécharger mon CV</a>
                 </div>
             </div>
         </div>
