--- a/app/views/templates/blog.twig
+++ b/app/views/templates/blog.twig
@@ -13,14 +13,12 @@
 
     <section class="page-section blog" id="blog">
         <div class="container d-flex align-items-center flex-column">
-        <!-- Blog Grid Items-->
-        <div class="row justify-content-center mt-5">
-            {% if deletesuccess %}
-                {% for message in deletesuccess %}
-                    <div class="alert alert-success" role="alert">
-                        {{ message }}
-                    </div>
-                {% endfor %}
+            <!-- Blog Grid Items-->
+            <div class="row justify-content-center mt-5">
+            {% if session.tmp %}
+                <div class="alert alert-success" role="alert">
+				    {{ session.tmp|nl2br }}
+                </div>
             {% endif %}
             </div>
             <div class="row justify-content-center">
