--- a/app/views/templates/editpost.twig
+++ b/app/views/templates/editpost.twig
@@ -1,20 +1,41 @@
 {% extends 'layout.twig' %}
 
 {% block pagetitle %}
-    <title>Corentin Legriffon - Modifier article - {{ post.title }}</title>
+    <title>Modifier article - {{ post.postTitle }}</title>
 {% endblock %}
 
 {% block content %}
 
     {% if session.username and session.userIsAdmin == 1 %}
-
-        <header class="header bg-primary" id="head-editor">
+        <header class="header bg-primary" id="head-editor" style ="background-image: url(../public/images/blog/{{ post.urlImg }}); background-repeat: no-repeat; background-size: 100%; bottom 50px right 100px; background-position:center; background-attachment: fixed;">
             <div class="col-12 align-items-center text-white text-center text-uppercase">
                 <h4>Modification de l'article</h4><h2>{{ post.postTitle }}</h2>
             </div>
         </header>
         <section class="page-section" id="edit-form">
             <div class="container">
+                <div class="container text-center">
+                    {% if session.tmp.postError %}
+                        {% for message in session.tmp.postError %}
+                            <div class="alert alert-danger" role="alert">
+		                	    {{ message|nl2br }}
+		                	</div>
+                        {% endfor %}
+                    {% endif %}
+                    {% if session.tmp.fileError %}
+                        {% for message in session.tmp.fileError %}
+                            <div class="alert alert-danger" role="alert">
+		                	    {{ message|nl2br }}
+		                	</div>
+                        {% endfor %}
+                    {% endif %}
+    
+                    {% if session.tmp.postSuccess %}
+                        <div class="alert alert-success" role="alert">
+			        	    {{ session.tmp.postSuccess|nl2br }}
+                        </div>
+                    {% endif %}
+                </div>
                 <div class="row text-white">
                     <div class="col-sm-12 col-lg-6">
                         <!-- FORM -->
