--- a/app/views/templates/layout.twig
+++ b/app/views/templates/layout.twig
@@ -21,7 +21,7 @@
   <body>
   <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top py-1" id="mainNav">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#top">.LGRF</a>
+      <a class="navbar-brand" href="{{ session.routes.home }}">.LGRF</a>
       <button class="navbar-toggler font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -43,7 +43,7 @@
                 <div class="dropdown">
                   <button class="btn btn-sm dropdown-toggle m-1 text-white text-uppercase" type="button" data-bs-toggle="dropdown" aria-expanded="false">Admin</button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                      <a class="dropdown-item nav-link py-2 px-0 px-lg-2" href="{{ session.routes.account }}">{{ session.username }}</a>
+                      <a class="dropdown-item nav-link py-2 px-0 px-lg-2" href="{{ session.routes.account }}">Mon compte</a>
                       <div class="dropdown-divider"></div>
                       <a class="dropdown-item nav-link py-2 px-0 px-lg-2 text-normalize" href="{{ session.routes.newpost }}">Nouvel article</a>
                       <a class="dropdown-item nav-link py-2 px-0 px-lg-2 text-normalize" href="{{ session.routes.userlist }}1">Liste des utilisateurs</a>
@@ -54,7 +54,7 @@
             {% endif %}
             {# If connected user is not admin #}
             {% if session.userIsAdmin == 0 %}
-              <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-2 px-0 px-lg-2 rounded" href="{{ session.routes.account }}">{{ session.username }}</a></li>
+              <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-2 px-0 px-lg-2 rounded" href="{{ session.routes.account }}">Mon compte</a></li>
             {% endif %}
             <!-- Disconnect button -->
             <li class="m-1"><button class="btn btn-outline-danger btn-sm" type="button" data-bs-toggle="modal" data-bs-target="#disconnect">Déconnexion</button></li>
